- bug #1601625 [display] The Ignore checkbox is not unchecked for ENUM 
- bug #2809930 [setup] Notice: Undefined variable: k in setup/index.php
- bug [features] Incorrect report of missing relational features 
- [security] XSS: Insufficient output sanitizing (not exploitable without a valid token)
  thanks to Sven Vetsch/Disenchant for informing us in a responsible manner

3.2.0.1 (2009-06-30)
- [security] XSS: Insufficient output sanitizing in bookmarks 

3.2.0.0 (2009-06-15)
- [core] better support for vendor customisation (based on what Debian needs)
+ rfe #2127987 warn when session.gc_maxlifetime is less than cookie validity
+ rfe #2100910 configurable default charset for import
+ rfe #1913541 link to InnoDB status when error 150 occurs
+ rfe #1927189 strip ` from column names on import
+ rfe #1821619 LeftFrameDBSeparator can be an array
+ patch #1821619 [privileges] Extra back reference when editing table-specific
  privileges, thanks to Herman van Rink - helmo
+ patch #2356575 [display] Sortable database columns,
  thanks to Bryce Thornton - brycethornton
- patch #2486825 [lang] Wrong string in setup script hints,
  thanks to Isaac Bennetch - ibennetch
- patch #2498350 [cleanup] XHTML cleanup, thanks to Virsacer - virsacer 
+ patch #2494192 [display] Possibility of disabling the sliders, 
  thanks to Virsacer - virsacer 
+ patch #2506831 [privileges] Create user for existing database, 
  thanks to Herman van Rink and Virsacer
+ patch #2505255 [privileges] Cleanup, thanks to Virsacer - virsacer
- bug #2414056 [auth] AllowNoPasswordRoot error message is too vague 
- patch #2596230 [XHTML] View table headers/footers completely,
  thanks to Virsacer - virsacer
- patch #2602633 [core] support column name having square brackets, 
  thanks to Herman van Rink - helmo
+ [lang] Lithuanian update, thanks to Rytis Slatkevicius - rytis_s 
+ [auth] New setting AllowNoPassword (supercedes AllowNoPasswordRoot) that
  applies to all accounts (even the anonymous user)